<resources>
    <string name="app_name">Cartão de Visita</string>
    <string name="cartao_de_visita">Cartão de Visita</string>
    <string name="adicionar">Adicionar</string>
    <string name="novo_cartao">Novo Cartão</string>
    <string name="label_nome">Nome</string>
    <string name="label_telefone">Telefone</string>
    <string name="label_mail">E-mail</string>
    <string name="label_empresa">Empresa</string>
    <string name="label_cor">Cor</string>
    <string name="label_confirmar">Confirmar</string>
    <string name="lable_escolher_cor">Escolha a cor</string>
    <string name="fechar_tela">Fechar Tela</string>
    <string name="label_show_sucesso">Cadastro realizado com sucesso</string>
    <string name="label_compartilhar">Compartilhar</string>
</resources>